implementação dos controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=ConnectionSolutions_IA
 
+spring.messages.basename=ValidationMessages
+
+
 spring.security.user.name=admin
 spring.security.user.password=123456
 
